# gcs-latency-poc

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-murat  README.md  cloudbuild-murat.yaml  cloudbuild.yaml  requirements.txt  setup.cfg
scripts/: create-cloudrun-job-murat.sh  create-cloudrun-job.sh  create-cloudrun.sh  create-storage.sh  exec-cloudrun-job-murat.sh  exec-cloudrun-job.sh  setup-cloudrun.sh
src/latency/: generate_files.py  write_to_gcs.py  write_to_gcs_murat.py
