[metadata]
name=gcs-latency-poc
version=0.0.1
description=We measure the latency of Google Cloud Storage using small files of various sizes
author=Gino Filicetti
author_email=ginof@google.com
url=https://github.com/gfilicetti/gcs-latency-poc

[options]
package_dir=
     =src
packages=find:
python_requires=>=3.7
install_requires=
    google-cloud-storage

[options.packages.find]
where=src

[options.extras_require]
gcp=
    kfp>=1.8,<2.0
    google-cloud-aiplatform
    google-cloud-pipeline-components
interactive=
    matplotlib
    seaborn
    pandas-gbq
    gcsfs
    pyarrow
dev=
    flake8

[flake8]
max-line-length=120
max-complexity=10
exclude=
    .venv
    build
